--- a/Start_page/onepage.html
+++ b/Start_page/onepage.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OnePage</title>
     <link rel="stylesheet" href="onepage.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -47,6 +48,30 @@
                     <button type="button" class="Get_btn">Get Start</button>
                 </div>
             </div>
+            <!-- card page start -->
+            <div class="card_page">
+                <div class="card_one">
+                    <i class="fa fa-slack" aria-hidden="true"></i>
+                    <h4>Lorem Ipsum</h4>
+                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                </div>
+                <div class="card_two">
+                    <i class="fa fa-paint-brush" aria-hidden="true"></i>
+                    <h4>Sed ut perspiciatis</h4>
+                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+                </div>
+                <div class="card_three">
+                    <i class="fa fa-comments" aria-hidden="true"></i>
+                    <h4>Magni Dolores</h4>
+                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+                </div>
+                <div class="card_four">
+                    <i class="fa fa-print" aria-hidden="true"></i>
+                    <h4>Nemo Enim</h4>
+                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+                </div>
+            </div>
+            <!-- card page End -->
         </section>
     </div>
 </body>
