--- a/Start_page/onepage.html
+++ b/Start_page/onepage.html
@@ -11,39 +11,39 @@
 </head>
 
 <body>
-    <div class="start_page">
-        <section>
-            <div class="topnav" id="myTopnav">
-                <div class="OnePage">
-                    <h1>
-                        <a href="#">One Page</a>
-                    </h1>
-                </div>
-                <div class="nav_bar">
-                    <a href="#home">Home</a>
-                    <a href="#About">About</a>
-                    <a href="#portFolio">PortFolio</a>
-                    <a href="#contact">Contact</a>
-                    <a href="#Team">Team</a>
-                    <a href="#Pricing">Pricing</a>
-                    <a href="" class="dropdown">
-                        <p class="dropbtn">Dropdown</p>
-                        <div class="dropdown-content">
-                            <p>Dropdown 1</p>
-                            <p>Dropdown 2</p>
-                            <p>Dropdown 3</p>
-                            <p>Dropdown 4</p>
-                            <p>Dropdown 5</p>
-                        </div>
-                        <i class="fa fa-chevron-down" aria-hidden="true"></i>
-                    </a>
-                    <a href="#"><button type="button" class="start_btn">Get Start</button></a>
-                    <a href="#" class="icon" onclick="myFunction()">
-                        <i class="fa fa-bars"></i>
-                    </a>
-                </div>
+    <section>
+        <div class="topnav" id="myTopnav">
+            <div class="OnePage">
+                <h1>
+                    <a href="#">One Page</a>
+                </h1>
             </div>
-        </section>
+            <div class="nav_bar">
+                <a href="#home">Home</a>
+                <a href="#About">About</a>
+                <a href="#portFolio">PortFolio</a>
+                <a href="#contact">Contact</a>
+                <a href="#Team">Team</a>
+                <a href="#Pricing">Pricing</a>
+                <a href="" class="dropdown">
+                    <p class="dropbtn">Dropdown</p>
+                    <div class="dropdown-content">
+                        <p>Dropdown 1</p>
+                        <p>Dropdown 2</p>
+                        <p>Dropdown 3</p>
+                        <p>Dropdown 4</p>
+                        <p>Dropdown 5</p>
+                    </div>
+                    <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                </a>
+                <a href="#"><button type="button" class="start_btn">Get Start</button></a>
+                <a href="#" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                </a>
+            </div>
+        </div>
+    </section>
+    <div class="start_page">
         <section>
             <div class="home_page">
                 <div class="content_page">
@@ -77,6 +77,7 @@
             </div>
             <!-- card page End -->
         </section>
+        <!-- about page start -->
         <section id="about" class="about">
             <div class="about_page_start">
                 <div class="about_page">
@@ -105,11 +106,177 @@
                     </div>
                 </div>
             </div>
-
         </section>
+        <!-- about page End -->
+
+        <!-- count page start -->
+        <section>
+            <div class="count_page">
+                <div class="count">
+                    <div class="count_one">
+                        <span>65</span>
+                        <p>Happy Clients</p>
+                    </div>
+                    <div class="count_two">
+                        <span>85</span>
+                        <p>Projects</p>
+                    </div>
+                    <div class="count_three">
+                        <span>30</span>
+                        <p>Years of experience</p>
+                    </div>
+                    <div class="count_four">
+                        <span>20</span>
+                        <p>Awards</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- count page End -->
+
+        <!-- video page start -->
+        <section>
+            <div class="video_page">
+                <div class="video">
+                    <iframe width="560" height="400" src="https://www.youtube.com/embed/FLoUEzG4ByU"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                </div>
+                <div class="video_content">
+                    <h2>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua.</p>
+                    <ul>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>Ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat.</li>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>Duis aute irure dolor in reprehenderit in
+                            voluptate velit.</li>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>Voluptate repellendus pariatur reprehenderit
+                            corporis sint.</li>
+                        <li><i class="fa fa-check" aria-hidden="true"></i>Ullamco laboris nisi ut aliquip ex ea commodo
+                            consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda
+                            mastiro
+                            dolore eu fugiat nulla pariatur.</li>
+                    </ul>
+                    <h4>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+                        in
+                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                        non
+                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum</h4>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="log_page">
+                <div class="company_logo">
+                    <img src="./../Image/log-img/client-1.png" width="8%">
+                    <img src="./../Image/log-img/client-2.png" width="8%">
+                    <img src="./../Image/log-img/client-3.png" width=8%">
+                    <img src="./../Image/log-img/client-4.png" width=8%">
+                    <img src="./../Image/log-img/client-5.png" width=8%">
+                    <img src="./../Image/log-img/client-6.png" width=8%">
+                </div>
+            </div>
+            <div class="testmonal_page">
+                <h2>TESTIMONIALS</h2>
+                <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
+                    consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
+                    fugiat sit in iste officiis commodi quidem hic quas.</p>
+            </div>
+
+            <div class="scroll_page">
+                <div class="start_scroll">
+                    <div class="first_scroll">
+                        <p> Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus.
+                            Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                        </p>
+                        <img src="./../Image/textmonal/person-1.jpg" width="40%">
+                        <h2>Saul Goodman</h2>
+                        <h3>Ceo & Founder</h3>
+                    </div>
+                    <div class="first_second">
+                        <p> Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim
+                            velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum
+                            veniam. </p>
+                        <img src="./../Image/textmonal/testimonials-2.jpg" width="40%">
+                        <h2>Saul Goodman</h2>
+                        <h3>shop owner</h3>
+                    </div>
+                    <div class="first_third">
+                        <p> Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum
+                            eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim
+                            culpa. </p>
+                        <img src="./../Image/textmonal/testimonials-3.jpg" width="40%">
+                        <h2>Saul Goodman</h2>
+                        <h3>Designer</h3>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- section page start -->
+        <section>
+            <div class="service_page">
+                <div class="service_page_start">
+                    <h2>SEVICES</h2>
+                    <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit
+                        sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias
+                        ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                </div>
+            </div>
+
+            <div class="service_card_one">
+                <div class="card_loream">
+                    <i class="fa fa-file" aria-hidden="true"></i>
+                    <h3>Lorem Ipsum</h3>
+                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                </div>
+                <div class="card_sed">
+                    <i class="fa fa-file" aria-hidden="true"></i>
+                    <h3>Lorem Ipsum</h3>
+                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                </div>
+                <div class="card_tmagine">
+                    <i class="fa fa-file" aria-hidden="true"></i>
+                    <h3>Lorem Ipsum</h3>
+                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                </div>
+            </div>
+            <div class="service_card_two">
+                <div class="card_nemo">
+                    <i class="fa fa-file" aria-hidden="true"></i>
+                    <h3>Lorem Ipsum</h3>
+                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                </div>
+                <div class="card_dele">
+                    <i class="fa fa-file" aria-hidden="true"></i>
+                    <h3>Lorem Ipsum</h3>
+                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                </div>
+                <div class="card_divera">
+                    <i class="fa fa-file" aria-hidden="true"></i>
+                    <h3>Lorem Ipsum</h3>
+                    <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="callto_page">
+                <h3>Call To Action</h3>
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+                    anim id est laborum.</p>
+                <button type="button" class="calltoaction">Call To Action</button>
+            </div>
+        </section>
+        <!-- section page end -->
+        <!-- video page end -->
     </div>
     <div class="goto_top">
-        <button onclick="topFunction()" class="myBtn" id="myBtn" title="Go to top"><i class="fa fa-arrow-up" aria-hidden="true"></i>
+        <button onclick="topFunction()" class="myBtn" id="myBtn" title="Go to top"><i class="fa fa-arrow-up"
+                aria-hidden="true"></i>
         </button>
     </div>
     <script src="onepage.js"></script>
